<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:text="@string/override_location_provider"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
        <Button android:id="@+id/startRandomWalkLocationProvider"
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button android:id="@+id/stopRandomWalkLocationProvider"
                android:text="@string/stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:text="@string/override_location_service"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
        <Button android:id="@+id/startOverrideLocationService"
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button android:id="@+id/stopOverrideLocationService"
                android:text="@string/stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:text="@string/native_location"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
        <TextView android:id="@+id/nativeLocation"
                  android:text="(lat, lon)"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:text="@string/override_location"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
        <TextView android:id="@+id/overrideLocation"
                  android:text="(lat, lon)"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"/>
    </LinearLayout>

</LinearLayout>